<resources>
    <string name="app_name">Musawo</string>
    <string name="hello_world">Welcome its our pleasure to help you</string>
    <string name="action_settings">Settings</string>

    <string name="enter_name">Enter UserName</string>
    <string name="password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="new_here">if new here please sign up for a new musawo account</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Please fill the form below to register</string>
    <string name="first_name">Enter FirstName</string>
    <string name="last_name">Enter LastName</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Re-Enter Your Password</string>
    <string name="submit">SUBMIT</string>
    <string name="category">Enter What You Specialise in</string>


    <string name="title_activity_home">Home</string>
    <string name="button1">Add Patient</string>
    <string name="button2">Update patient</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="button_delete">Delete Patient</string>
    
    <string name="title_activity_addpatient">Addpatient</string>
    <string name="patient_name">Enter PatientName</string>
    <string name="patient_age">Enter patientAge</string>
    <string name="disease">Enter Disease/Infection</string>
    <string name="prescription">Enter Prescription</string>
    <string name="returndate">Enter Return Date</string>
    <string name="remark">Enter Remarks</string>
    <string name="drug">Enter Drugs given</string>
    <string name="save">SAVE</string>

    <string name="title_activity_delete_patient">DeletePatient</string>
    <string name="enter_RowId">Please enter row id</string>
    <string name="enterr_name">Please Enter Name</string>
    <string name="message">Are You sure you want to Delete</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>


    
    


</resources>
