
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">



    <TextView
        android:text="@string/hello_world"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/enter_name"
        android:textSize="25sp"
        android:id="@+id/textView1"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/password"
        android:layout_below="@+id/editText"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/editText1"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:textSize="25sp"
        android:background="@color/background_material_dark"
        android:layout_marginTop="15dp"
        android:onClick="loginButtonListener"/>
    <Button
        android:id="@+id/cancle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:background="@color/background_material_dark"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:text="@string/cancel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:text="@string/new_here"
        android:textSize="25sp"
        android:textColor="@color/accent_material_dark"
        android:layout_marginTop="25dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_button"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:background="@color/background_material_dark"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:onClick="signupButtonListener"/>

</RelativeLayout>
</ScrollView>
