<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tadz.example.com.musawo.RegisterFragment"
    android:background="#FF99FF">

    <TextView
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/text_View"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="25sp"
        android:id="@+id/text_View1"
        android:layout_below="@+id/text_View"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Text"
        android:layout_below="@+id/text_View1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="25sp"
        android:id="@+id/text_View2"
        android:layout_below="@+id/edit_Text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Text1"
        android:layout_below="@+id/text_View2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="25sp"
        android:id="@+id/text_View3"
        android:layout_below="@+id/edit_Text1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Text2"
        android:layout_below="@+id/text_View3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="25sp"
        android:id="@+id/text_View4"
        android:layout_below="@+id/edit_Text2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Text3"
        android:layout_below="@+id/text_View4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp"
        android:id="@+id/text_View5"
        android:layout_below="@+id/edit_Text3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Text4"
        android:layout_below="@+id/text_View5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="25sp"
        android:id="@+id/text_View6"
        android:layout_below="@+id/edit_Text4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Text5"
        android:layout_below="@+id/text_View6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_Text5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/submit"
        android:textSize="25sp"
        android:background="@color/background_material_dark"
        android:layout_marginTop="5dp"
        android:onClick="submitButtonListener"/>


</RelativeLayout>
